objects/TASKRAY__trGlobalSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>TASKRAY__trAddContributorsAsync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Contributors Async</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trBusinessDayMode__c</fullName>
        <description>Project Schedule options include simple, native, and none. Simple assumes Saturdays and Sundays are non-working days, advanced references Business Hours defined in Salesforce Setup, and none makes every day of the week a working day. For native, schedules defined through Business Hours are connected through the Project Schedule lookup field on projects.</description>
        <inlineHelpText>Determines working and non-working days for scheduling tasks. &quot;None&quot; treats every day as a working day; &quot;simple&quot; sets Saturdays and Sundays as non-working days; &quot;native&quot; allows linking custom business hour schedules and holidays to projects.</inlineHelpText>
        <label>Project Schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trChangeItemDebounceDelay__c</fullName>
        <defaultValue>500</defaultValue>
        <label>Batching board transaction delay in ms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCommunityTLDOverride__c</fullName>
        <label>TaskRay Community TLD</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCompletionPercentageInFuture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated (Do Not Use)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trComponentsNavToStdUI__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This setting makes lightning components navigate to record homes.</inlineHelpText>
        <label>Components Nav to Record Home</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trComponentsNavToTRVF__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This setting makes lightning components navigate to the TaskRay Visualforce page instead of record homes.</inlineHelpText>
        <label>Deprecated (Do Not Use)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trConcurrency__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Toggles the concurrency feature of TaskRay.</description>
        <inlineHelpText>This toggles TaskRay&apos;s checks for updates from other users. Disabling it will have less impact on Salesforce servers, but there may be issues regarding multiple users updating the same tasks.

Default value is &quot;Checked&quot;</inlineHelpText>
        <label>Notification Polling Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trContactSupportOverride__c</fullName>
        <label>Override Contact Support link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCreateRepeatInFuture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create repeat tasks in the future</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCustomCSSURL__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>trCustomCSSURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCustomWeightDefault__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Sets the org-wide custom task weighting default value. Controlled from the TaskRay Tools &amp; Settings menu. Defaults to 1. Minimum of 0.</inlineHelpText>
        <label>Custom Task Weighting Default</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDefaultFFSet__c</fullName>
        <label>Default Flex Filter Set</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDetailModalExperimentalRedirect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Detail Modal - Experimental Redirect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trDoNotUseConsoleTabNav__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This setting applies when TaskRay is used in the Console Lightning App and controls how Projects and Tasks are viewed.</inlineHelpText>
        <label>Do not use console tabs for TaskRay Nav</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEnableDependencyUpdates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Legacy Dependencies (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEnableMultipleDependencies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Multiple Dependencies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEnableMultipleTaskRecordTypes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows for the use of multiple Task record types per Project.</description>
        <inlineHelpText>Allows for the use of multiple Task record types per Project.</inlineHelpText>
        <label>Enable Multiple Task Record Types</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEnableRecordLockRetry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retry transaction on lock exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEnableSlackIntegration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Slack Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEnableTimeTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Time Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEnhancedCloning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Enhanced Cloning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEnhancedFilterMode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables Enhanced Filtering feature set</description>
        <label>Enhanced Filter Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEnhancedModalLayouts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting enables enhanced detail modal layouts in TaskRay.  This allows for the use of native Salesforce object page layouts instead of field sets.</description>
        <inlineHelpText>This setting enables enhanced detail modal layouts in TaskRay.  This allows for the use of native Salesforce object page layouts instead of field sets.</inlineHelpText>
        <label>Enhanced Modal Layouts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trExcludeArchivedFromCompletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Archived Tasks from Progress %</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trExcludedProjectTabs__c</fullName>
        <inlineHelpText>Excludes specified tabs from the TaskRay Project modal. Accepted values are Chatter, Files, Team, Insights, On-Hold, FluxPlanner, Quip, Box, GridBuddy, CustomTab1, CustomTab2. All values are case sensitive, should be separated by commas, and include no spaces. For example, to exclude Chatter and Team, input: Chatter,Team</inlineHelpText>
        <label>Excluded Project Tabs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trExcludedTaskGroupTabs__c</fullName>
        <inlineHelpText>Excludes specified tabs from the TaskRay Task Group modal. Accepted values are Chatter, Files. For example, to exclude Chatter and Files, input: Chatter,Files</inlineHelpText>
        <label>Excluded Task Group Tabs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trExcludedTaskTabs__c</fullName>
        <inlineHelpText>Excludes specified tabs from the TaskRay Task modal. Accepted values are Chatter, Files, Checklist, Time, FluxPlanner, Quip, Box, CustomTab1, CustomTab2. All values are case sensitive, should be separated by commas, and include no spaces. For example, to exclude Time and Checklist, input: Time,Checklist</inlineHelpText>
        <label>Excluded Task Tabs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trExcludedViews__c</fullName>
        <inlineHelpText>Excludes specified views from the TaskRay interface.  Accepted values are &quot;MyWork&quot;, &quot;Kanban&quot;, &quot;Row&quot;, &quot;Plan&quot;, &quot;Calendar&quot;, &quot;Portfolio&quot;, &quot;TemplatePerformance&quot; separated by commas.</inlineHelpText>
        <label>Excluded Views</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trFormsPublicSiteURL__c</fullName>
        <inlineHelpText>The URL of the Public Site used to host TaskRay Forms.</inlineHelpText>
        <label>TaskRay Forms Public Site URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trFormsPublicSiteUserId__c</fullName>
        <inlineHelpText>The User ID of the TaskRay Forms Public Site Guest User.</inlineHelpText>
        <label>TaskRay Forms Public Site User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trGridBuddyURLForProject__c</fullName>
        <defaultValue>&quot;gblite__Grid?gname=Tasks+For+Projects&quot;</defaultValue>
        <label>trGridBuddyURLForProject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trHideContactSupport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Contact Support link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trHideQuipTab__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Applies to orgs that have Quip installed.</inlineHelpText>
        <label>Hide Quip from Project and Task modals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trIsScratchOrg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, TaskRay will behave properly in a scratch org with the TASKRAY namespace.</description>
        <label>Is Scratch Org? (Bracket Labs Only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trListColor_1__c</fullName>
        <label>Deprecated (Do Not Use)</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trListColor_2__c</fullName>
        <label>Deprecated (Do Not Use)</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trListColor_3__c</fullName>
        <label>Deprecated (Do Not Use)</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trLockDownSharingOnNewProjects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock Down Sharing on New Projects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trNestedGroupHierarchy__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Public group hierarchy query level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trNoLockChangeItemUpdates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Toggle off locking for board transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trNotificationAge__c</fullName>
        <label>Maximum Notification Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOnboardingFeedbackFlow__c</fullName>
        <inlineHelpText>The API Name of the Screen Flow to display on the TaskRay Onboarding Feedback Form Public Site.</inlineHelpText>
        <label>Onboarding Feedback Flow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOnlyShowOwnersInTeamTab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Only show task owners in team sidebar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOptOutOfSortOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt out of TaskRay Sort Order updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trOptOutOfTRSharing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt out of standard TaskRay sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trPollingInterval__c</fullName>
        <defaultValue>10.000</defaultValue>
        <description>Sets the polling interval in seconds for Taskray&apos;s concurrency feature.</description>
        <inlineHelpText>This value is the interval that TaskRay checks for updates from other users. This value can range from 5 to 99 seconds, with a default value of 10. Higher values reduce Salesforce server impact but increase the time period between update notifications.</inlineHelpText>
        <label>Polling Interval</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trProjectCompletionFlow__c</fullName>
        <defaultValue>&quot;TASKRAY/TaskRay_Customer_Onboarding_Completion_Flow&quot;</defaultValue>
        <inlineHelpText>The API Name of the Screen Flow to run when TaskRay Projects are completed via the &apos;Complete&apos; button. Works with the &apos;Project Completion Option&apos; custom setting.</inlineHelpText>
        <label>Project Completion Flow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trProjectCompletionOption__c</fullName>
        <defaultValue>&quot;Choice&quot;</defaultValue>
        <description>This setting controls how TaskRay Projects can be completed via the &apos;Complete&apos; button.  &quot;Simple&quot; offers the choice to set the &apos;Completed&apos; checkbox on a Project; &quot;Choice&quot; will prompt the user to choose between completing the Project or launching the Flow specified in the &apos;Completion Flow&apos; custom setting; &quot;Flow&quot; will automatically launch the Flow specified in the &apos;Completion Flow&apos; custom setting.</description>
        <inlineHelpText>TaskRay Projects can be completed via the &apos;Complete&apos; button.  &quot;Simple&quot; offers the choice to set the &apos;Completed&apos; checkbox on a Project; &quot;Choice&quot; will prompt the user to choose how to complete the project.</inlineHelpText>
        <label>Project Completion Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trProjectModalCustomTab1Label__c</fullName>
        <label>Project Modal Custom Tab 1 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trProjectModalCustomTab1URL__c</fullName>
        <inlineHelpText>TaskRay will substitute the project id for $id in this url</inlineHelpText>
        <label>Project Modal Custom Tab 1 URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trProjectModalCustomTab2Label__c</fullName>
        <label>Project Modal Custom Tab 2 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trProjectModalCustomTab2URL__c</fullName>
        <inlineHelpText>TaskRay will substitute the project id for $id in this url</inlineHelpText>
        <label>Project Modal Custom Tab 2 URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trProjectQueryIncrement__c</fullName>
        <defaultValue>1000</defaultValue>
        <description>Sets the project query size for board filter incremental querying.</description>
        <inlineHelpText>This value determines the size of the project query that will be run if incremental querying is turned on.</inlineHelpText>
        <label>Board Filter: Project Query Increment</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trPublicSiteURL__c</fullName>
        <label>TaskRay Public Site URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trPublicSiteUserId__c</fullName>
        <label>TaskRay Public Site User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trRunTransactionsInWorker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run transactions via worker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trRunTransactionsOnMainThread__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated (Do Not Use)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trShowSyncMetadataCacheButton__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Sync Metadata Cache Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTaskLabelColor_1__c</fullName>
        <defaultValue>&quot;#c3325f&quot;</defaultValue>
        <label>Task Label Color 1</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTaskLabelColor_2__c</fullName>
        <defaultValue>&quot;#7a43b6&quot;</defaultValue>
        <label>Task Label Color 2</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTaskLabelColor_3__c</fullName>
        <defaultValue>&quot;#216b81&quot;</defaultValue>
        <label>Task Label Color 3</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTaskModalCustomTab1Label__c</fullName>
        <label>Task Modal Custom Tab 1 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTaskModalCustomTab1URL__c</fullName>
        <inlineHelpText>TaskRay will substitute the task id for $id in this url</inlineHelpText>
        <label>Task Modal Custom Tab 1 URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTaskModalCustomTab2Label__c</fullName>
        <label>Task Modal Custom Tab 2 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTaskModalCustomTab2URL__c</fullName>
        <inlineHelpText>TaskRay will substitute the task id for $id in this url</inlineHelpText>
        <label>Task Modal Custom Tab 2 URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTaskQueryIncrement__c</fullName>
        <defaultValue>1000</defaultValue>
        <description>Sets the task query size for board filter incremental querying.</description>
        <inlineHelpText>This value determines the size of the task query that will be run if incremental querying is turned on.</inlineHelpText>
        <label>Board Filter: Task Query Increment</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTaskWeightingType__c</fullName>
        <inlineHelpText>Sets the org-wide task weighting type, from the TaskRay Tools &amp; Settings menu. Accepted values are: &apos;Standard&apos; (also null), &apos;Time-Based&apos;, or &apos;Custom&apos;.</inlineHelpText>
        <label>Task Weighting Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTasksInternalOnlyByDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting controls the default value of the Internal Only field on Tasks</description>
        <inlineHelpText>This setting controls the default value of the Internal Only field on Tasks</inlineHelpText>
        <label>Mark tasks as internal only by default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTasksOnBoardLimit__c</fullName>
        <defaultValue>6000</defaultValue>
        <label>trTasksOnBoardLimit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTimeBillableDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Applies to TaskRay Time entries and the default value of the Billable checkbox</inlineHelpText>
        <label>Mark time entries as billable by default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTimeDisplayTypeField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show the Type field on time entries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trUpdateDependenciesAfterClone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated (Do Not Use)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trUseDefaultSharingReason__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This setting does not use the &quot;Added to TaskRay Project Team&quot; sharing reason. Not using this reason allows Tasks to be assigned to a High Volume external user.</inlineHelpText>
        <label>Deprecated (Do Not Use)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trUseOldCloneProjectModal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use old project clone modal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trUseSVGPlanViewPrint__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Deprecated SVG Printing is no longer supported.</inlineHelpText>
        <label>Deprecated (Do Not Use)</label>
        <type>Checkbox</type>
    </fields>
    <label>TaskRay Global Settings</label>
</CustomObject>